# arxiv_rag_pipeline

./: .dockerignore  .gitignore  Dockerfile  README.md  arxiv_data_cache.json  arxiv_parser.ipynb  config.py  control_panel.ipynb  docker-compose.yaml  ground_truth_eval.ipynb  main.py  pyproject.toml  testing.ipynb
.github/: workflows
.github/workflows/: ci.yml  sync_to_hub.yml
analysis/: analyze_experiment_results.py
app/: app.py
archive/: arxiv_parser.ipynb  response_evaluation_subset_generation.ipynb  search_ground_truth.ipynb  testing_notebook.ipynb
archive/data_archive/: generated_responses.jsonl  response-evaluation-subset.jsonl  response_evaluation_results.jsonl  search-ground-truth-data.jsonl
clients/: llm_client.py  vecdb_client.py
config/: model_configs.yaml  paths.py
data/evaluation/: evaluation_data.json  evaluation_results.json  generated_responses.jsonl
data/ground_truth/: ground-truth-data.csv  response-evaluation-subset.csv  response-evaluation-subset.jsonl  search-ground-truth-data.jsonl
evaluation/: llm_as_judge.py  response_evaluation.py  search_evaluation.ipynb  search_evaluation.py
generate_data/: eval_subsample.py  generate_responses.py  ground-truth-data.csv  response_evaluation_subset_generation.py  search_ground_truth.ipynb  search_ground_truth.py
pipeline/: ingestion.py  rag.py
results/: response_evaluation_results.jsonl  search_evaluation_results.jsonl
schemas/: document.py  llm_models.py
scratch/: ipo.md
scripts/: rebuild_collection.py
tests/: test_search_evaluation.py
utils/: jsonl_utils.py
(+6 files in other folders)
