[project]
name = "arxiv-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arxiv>=3.0.0",
    "dotenv>=0.9.9",
    "fastembed>=0.7.4",
    "jupyter>=1.1.1",
    "matplotlib>=3.11.0",
    "numpy>=2.4.4",
    "openai>=2.32.0",
    "pandas>=3.0.2",
    "pydantic>=2.13.2",
    "pytest>=9.1.0",
    "pyyaml>=6.0.3",
    "qdrant-client[fastembed]>=1.14.2",
    "rich>=15.0.0",
    "ruff>=0.15.12",
    "streamlit>=1.57.0",
    "tenacity>=9.1.4",
    "xmltodict>=1.0.4",
]
